# rag-hub

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  server.py
common/: __init__.py  base.py  chunkers.py  config.py  embeddings.py  korean_tokenizer.py  llm.py  usage.py  vector_store.py
dashboard/: Dockerfile  README.md  app.py
dashboard/components/: compare.py  cost.py  data.py  demo.py  guide.py  labels.py  questions.py
data/sample/: english_docs.jsonl  korean_docs.jsonl  loader.py
data/wiki/: topics.txt
designsite/: Dockerfile  index.html
designsite/data/: rag_data.js  rag_labels.js
designsite/pages/: Compare.jsx  Cost.jsx  Demo.jsx  Guide.jsx  Questions.jsx  shared.jsx
designsite/styles/: console.css
docs/: architecture.md  overview.md  qwen-temp-cleanup.md  references.md  technique-comparison.md  v4-evaluation-insights-v2.md  v4-evaluation-insights.md
evaluation/: README.md  compare.py  questions.jsonl  questions_wiki.jsonl  ragas_eval.py
evaluation/results/: 01-naive-20260529-053350.json  01-naive-20260529-053350.md  01-naive-20260529-071648.json  01-naive-20260529-071648.md  01-naive-20260529-073111.json  01-naive-20260529-073111.md  01-naive-20260529-074201.json  01-naive-20260529-074201.md  01-naive-20260529-075412.json  01-naive-20260529-075412.md  01-naive-20260531-233655.json  01-naive-20260531-233655.md  01-naive-20260531-233736.json  01-naive-20260531-233736.md  01-naive-20260602-030733.json  (+69 more)
scripts/: build_design_data.py  download_data.py  download_wiki_100.py
(+26 files in other folders)
