[project]
name = "rag-hub"
version = "0.1.0"
description = "RAG techniques gallery with RAGAS evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "sentence-transformers>=3.3.0",
    "transformers>=4.46.0",
    "torch>=2.4.0",
    "kiwipiepy>=0.20.0",
    "rank-bm25>=0.2.2",
    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "tiktoken>=0.8.0",
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "typer>=0.13.0",
    "wikipedia-api>=0.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "mistralai>=1.2.0",
    "langchain-mistralai>=0.2.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.1.0",
    "ipywidgets>=8.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
